--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "lint": "standard",
     "lint-fix": "standard --fix",
     "start": "node ./bin/www"
   },
