--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "standard",
     "lint-fix": "standard --fix",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./tests --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +15,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "standard": "^12.0.1"
   }
 }
