--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "standard",
     "lint-fix": "standard --fix",
     "start": "node ./bin/www",
-    "test": "mocha ./tests --recursive"
+    "test:unit": "mocha ./tests/units --recursive",
+    "test:integration": "mocha ./tests/integrations --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "supertest": "^4.0.2"
   }
 }
