--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,8 @@ artifacts:
   files:
     - app.js
     - taskdef.json
+    - appspec.json
+    - start.sh
     - index.html
     - package.json
     - node_modules/async/*
