--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,7 +26,7 @@ artifacts:
   files:
     - app.js
     - taskdef.json
-    - appspec.json
+    - appspec.yml
     - start.sh
     - index.html
     - package.json
