add docker files to buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,6 +27,8 @@ artifacts:
     - app.js
     - start.sh
     - index.html
+    - Dockerfile
+    - Dockerrun.aws.json
     - package.json
     - node_modules/async/*
     - node_modules/lodash/*
